package HFDP.Observer.V3;

public interface DisplayElement {
    public void display();
}
