@startuml
'https://plantuml.com/class-diagram

interface Subject{
    registerObserver()
    removeObserver()
    notifyObservers()
}
Subject <|-- WeatherData
Subject --> Observer

class WeatherData{
    registerObserver()
    removeObserver()
    notifyObservers()

    getTemperature()
    getHumidity()
    getPressure()
    measurementsChanged()
}

interface Observer{
    update()
}
Observer <|-- CurrentConditionsDisplay
Observer <|-- StatisticsDisplay
Observer <|-- ForecastDisplay
Observer <|-- ThirdPartyDisplay

interface DisplayElement{
    display()
}
DisplayElement <|-- CurrentConditionsDisplay
DisplayElement <|-- StatisticsDisplay
DisplayElement <|-- ForecastDisplay
DisplayElement <|-- ThirdPartyDisplay

class CurrentConditionsDisplay{
    update()
    display()
}
note bottom of CurrentConditionsDisplay : 显示当前温度、湿度、气压

class StatisticsDisplay{
    update()
    display()
}
note bottom of StatisticsDisplay : 显示跟踪天气信息

class ForecastDisplay{
    update()
    display()
}
note bottom of ForecastDisplay : 显示天气预报

class ThirdPartyDisplay{
    update()
    display()
}
note bottom of ThirdPartyDisplay : 第三方布告板

@enduml